<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F313C"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MenuSelectActivity">

    <Button
        android:id="@+id/display_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/mybutton"
        android:textAllCaps="false"
        android:clickable="false"
        android:shadowRadius="25"
        android:text="@string/armor"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#56CCF2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_text">

        <TextView
            android:layout_width="0dp"
            android:id="@+id/firstColumn"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/Name"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="0dp"
            android:id="@+id/secondColumn"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/Damage"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="0dp"
            android:id="@+id/thirdColumn"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/Material"
            android:textColor="#ffffff" />


    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout1" />




</androidx.constraintlayout.widget.ConstraintLayout>